--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1052,7 +1052,6 @@ payload:
   - '+.1234.cx'
   - '+.1234001.com'
   - '+.123456.la'
-  - '+.123456789.tv'
   - '+.123456img.com'
   - '+.12345good.com'
   - '+.12345good.net'
@@ -1438,7 +1437,6 @@ payload:
   - '+.170mv.com'
   - '+.170tao.com'
   - '+.17167.com'
-  - '+.1716dy.com'
   - '+.17173.com'
   - '+.17173cdn.com'
   - '+.17173ie.com'
@@ -1798,7 +1796,6 @@ payload:
   - '+.1cnmedia.com'
   - '+.1cno.com'
   - '+.1d1d100.com'
-  - '+.1d9z.com'
   - '+.1dao99.com'
   - '+.1dfa.com'
   - '+.1diaocha.com'
@@ -7275,7 +7272,6 @@ payload:
   - '+.abcve.com'
   - '+.abcxs.com'
   - '+.abcydia.com'
-  - '+.abczw.com'
   - '+.abd007.com'
   - '+.abdstem.com'
   - '+.abe-tech.com'
@@ -8011,7 +8007,6 @@ payload:
   - '+.aitemple.com'
   - '+.aiti.fun'
   - '+.aitiancheng.com'
-  - '+.aitoushe.com'
   - '+.aitrans.net'
   - '+.aitsw.com'
   - '+.aituan.com'
@@ -9649,6 +9644,7 @@ payload:
   - '+.baidu123.com'
   - '+.baidu521.com'
   - '+.baiduads.com'
+  - '+.baidubaidu.win'
   - '+.baidubaidubaidu.com'
   - '+.baidubaidubaidu.net'
   - '+.baidubce.com'
@@ -10704,7 +10700,6 @@ payload:
   - '+.bidns.net'
   - '+.biduo.cc'
   - '+.biduobao.com'
-  - '+.biduowu.com'
   - '+.biduoxs.com'
   - '+.bidwhy.com'
   - '+.biebird.com'
@@ -12295,7 +12290,6 @@ payload:
   - '+.cacfo.com'
   - '+.cacg.cc'
   - '+.cachekit.com'
-  - '+.cachetime.com'
   - '+.cackui.com'
   - '+.cacpp.com'
   - '+.cacre.org'
@@ -13107,7 +13101,6 @@ payload:
   - '+.cdt-md.com'
   - '+.cdtaishan.com'
   - '+.cdtianda.com'
-  - '+.cdueff.com'
   - '+.cduncname.com'
   - '+.cduyzh.com'
   - '+.cdvcloud.com'
@@ -16898,7 +16891,6 @@ payload:
   - '+.cu321.com'
   - '+.cuaa.net'
   - '+.cuanhuang.com'
-  - '+.cuanna.com'
   - '+.cuantianhou.net'
   - '+.cuav.net'
   - '+.cubead.com'
@@ -19354,7 +19346,6 @@ payload:
   - '+.dsfof.com'
   - '+.dsgho.com'
   - '+.dshigao.com'
-  - '+.dshjfh.com'
   - '+.dshrc.com'
   - '+.dskb.co'
   - '+.dskystudio.com'
@@ -20008,6 +19999,7 @@ payload:
   - '+.easyfami.com'
   - '+.easyfang.com'
   - '+.easyfapiao.com'
+  - '+.easygame2021.com'
   - '+.easygametime.com'
   - '+.easyhaitao.com'
   - '+.easyhexo.com'
@@ -20985,7 +20977,6 @@ payload:
   - '+.etu6.com'
   - '+.etuan.com'
   - '+.etudu.com'
-  - '+.etuonet.com'
   - '+.etycx.com'
   - '+.etyy.com'
   - '+.etyyy.com'
@@ -23408,7 +23399,6 @@ payload:
   - '+.gdwca.com'
   - '+.gdwlgp.com'
   - '+.gdwlife.com'
-  - '+.gdxgt.com'
   - '+.gdxxb.com'
   - '+.gdyjs.com'
   - '+.gdysdz.com'
@@ -23574,7 +23564,6 @@ payload:
   - '+.getmarkman.com'
   - '+.getquicker.net'
   - '+.getsurfboard.com'
-  - '+.getteamyi.com'
   - '+.getui.com'
   - '+.getui.net'
   - '+.getui.vip'
@@ -24118,7 +24107,6 @@ payload:
   - '+.gooagoo.com'
   - '+.gooann.com'
   - '+.good-display.com'
-  - '+.good-fine.com'
   - '+.good-import.com'
   - '+.good.cc'
   - '+.good1230.com'
@@ -26355,6 +26343,7 @@ payload:
   - '+.hellowebfont.com'
   - '+.hellowgame.com'
   - '+.helloworld.net'
+  - '+.helloxjn.com'
   - '+.helloyao.com'
   - '+.helong.info'
   - '+.help-hope.org'
@@ -27842,7 +27831,6 @@ payload:
   - '+.huanlecdn.com'
   - '+.huanlefish.com'
   - '+.huanleguang.com'
-  - '+.huanlejia.vip'
   - '+.huanletang.com'
   - '+.huanlingxiuxian.com'
   - '+.huanlj.com'
@@ -28376,6 +28364,7 @@ payload:
   - '+.huxiu.com'
   - '+.huxiu.link'
   - '+.huxiucdn.com'
+  - '+.huya.cm'
   - '+.huya.com'
   - '+.huyahaha.com'
   - '+.huyanapp.com'
@@ -28665,7 +28654,6 @@ payload:
   - '+.hzqf123.com'
   - '+.hzqiuxue.com'
   - '+.hzqx.com'
-  - '+.hzqz.net'
   - '+.hzr1.com'
   - '+.hzrc.com'
   - '+.hzredream.com'
@@ -29615,7 +29603,6 @@ payload:
   - '+.ilaitui.com'
   - '+.ilancai.com'
   - '+.ilanluo.com'
-  - '+.ilanx.net'
   - '+.ilanx0.net'
   - '+.ilanzou.com'
   - '+.ilaw66.com'
@@ -31971,7 +31958,6 @@ payload:
   - '+.jitadaren.com'
   - '+.jitailian.com'
   - '+.jitangcn.com'
-  - '+.jitaqupu.com'
   - '+.jitashe.org'
   - '+.jitavip.com'
   - '+.jiterzzzz.com'
@@ -32009,6 +31995,7 @@ payload:
   - '+.jiujiuwj.com'
   - '+.jiujiuyingshi.com'
   - '+.jiujiuyunhui.com'
+  - '+.jiujiuzu.com'
   - '+.jiuku.com'
   - '+.jiulesy.com'
   - '+.jiulingwan.com'
@@ -32694,7 +32681,6 @@ payload:
   - '+.jsrxjt.com'
   - '+.jss580.org'
   - '+.jssalt.com'
-  - '+.jssdk.net'
   - '+.jssfx.com'
   - '+.jssgw.com'
   - '+.jsshow.net'
@@ -35365,7 +35351,6 @@ payload:
   - '+.lejianweike.com'
   - '+.lejiaolexue.com'
   - '+.lejj.com'
-  - '+.lejlb.com'
   - '+.leju.com'
   - '+.lejucaifu.com'
   - '+.lejuliang.com'
@@ -35534,7 +35519,6 @@ payload:
   - '+.leybc.com'
   - '+.leyifan.com'
   - '+.leying.com'
-  - '+.leying.org'
   - '+.leying365.com'
   - '+.leyingtt.com'
   - '+.leyishandong.com'
@@ -36372,6 +36356,7 @@ payload:
   - '+.lkme.cc'
   - '+.lkong.com'
   - '+.lkong.net'
+  - '+.lkssite.vip'
   - '+.lkszj.info'
   - '+.lkxianglong.net'
   - '+.lkyou.com'
@@ -37651,7 +37636,6 @@ payload:
   - '+.mangege.com'
   - '+.mangg.com'
   - '+.mangg.net'
-  - '+.manggo.fun'
   - '+.mangguo.com'
   - '+.mangguo.org'
   - '+.mangguo168.com'
@@ -39423,6 +39407,7 @@ payload:
   - '+.mrjiang.com'
   - '+.mrjjxw.com'
   - '+.mrkevin.net'
+  - '+.mrlika.com'
   - '+.mro9.com'
   - '+.mrpyq.com'
   - '+.mrqf.com'
@@ -39824,7 +39809,6 @@ payload:
   - '+.mylbabao.com'
   - '+.myleguan.com'
   - '+.mylguoji.com'
-  - '+.mylhospital.com'
   - '+.mylhz.com'
   - '+.mylibs.org'
   - '+.mylike.cc'
@@ -40369,7 +40353,6 @@ payload:
   - '+.newbd.com'
   - '+.newbe.pro'
   - '+.newbeebook.com'
-  - '+.newbiefly.com'
   - '+.newbmiao.com'
   - '+.newbolunesport.com'
   - '+.newcapec.net'
@@ -41618,7 +41601,6 @@ payload:
   - '+.oq78.com'
   - '+.oqss.com'
   - '+.or-sun.com'
-  - '+.oracledatabase12g.com'
   - '+.oradbca.com'
   - '+.oraev.com'
   - '+.oralpractice.com'
@@ -42430,7 +42412,6 @@ payload:
   - '+.phb123.com'
   - '+.phdwu.com'
   - '+.phedu.net'
-  - '+.phenixos.com'
   - '+.phezzan.com'
   - '+.phida.net'
   - '+.philipswechat.com'
@@ -45385,7 +45366,6 @@ payload:
   - '+.reyinapp.com'
   - '+.reyoo.com'
   - '+.reyun.com'
-  - '+.rezhishi.net'
   - '+.rf-gsm.com'
   - '+.rf.hk'
   - '+.rf.tm'
@@ -45555,6 +45535,7 @@ payload:
   - '+.rn-hswh.com'
   - '+.rnfengwo.com'
   - '+.rngtest.com'
+  - '+.ro4.cc'
   - '+.road-group.com'
   - '+.roadjava.com'
   - '+.roadlady.com'
@@ -48229,7 +48210,6 @@ payload:
   - '+.sinosteel.com'
   - '+.sinotf.com'
   - '+.sinotn.com'
-  - '+.sinotone.cc'
   - '+.sinotone.net'
   - '+.sinotrans.com'
   - '+.sinovale.com'
@@ -49112,7 +49092,6 @@ payload:
   - '+.speedsz.net'
   - '+.speedws.info'
   - '+.speedws.org'
-  - '+.speedycloud.cc'
   - '+.speiyou.com'
   - '+.spfmc.com'
   - '+.spforum.net'
@@ -49737,7 +49716,6 @@ payload:
   - '+.supercodepower.com'
   - '+.supercrm.com'
   - '+.superfix.com'
-  - '+.superforeseer.com'
   - '+.supergslb.com'
   - '+.superhl.com'
   - '+.superjq.com'
@@ -52515,6 +52493,7 @@ payload:
   - '+.tujiedianying.com'
   - '+.tujiwar.com'
   - '+.tujixiazai.com'
+  - '+.tuke8.com'
   - '+.tuke88.com'
   - '+.tukexw.com'
   - '+.tukkk.com'
@@ -53292,7 +53271,6 @@ payload:
   - '+.unsemi.com.tw'
   - '+.unspay.com'
   - '+.unsuv.com'
-  - '+.unsv.com'
   - '+.unyoo.com'
   - '+.unzg.com'
   - '+.uo12.com'
@@ -54110,7 +54088,6 @@ payload:
   - '+.voole.com'
   - '+.voole.net'
   - '+.voora.net'
-  - '+.voovle.net'
   - '+.voovlive.com'
   - '+.voovmeeting.com'
   - '+.vortexfun.com'
@@ -59125,7 +59102,6 @@ payload:
   - '+.xueba100.com'
   - '+.xuebalib.com'
   - '+.xuebingsi.com'
-  - '+.xuebuyuan.com'
   - '+.xuecaijie.com'
   - '+.xuecan.net'
   - '+.xuechebu.com'
@@ -62480,6 +62456,7 @@ payload:
   - '+.yzjsxy.com'
   - '+.yzkimage.com'
   - '+.yzkjpcb.com'
+  - '+.yzlxjt.com'
   - '+.yzmcms.com'
   - '+.yzmcxx.com'
   - '+.yzmg.com'
@@ -62838,7 +62815,6 @@ payload:
   - '+.zfsoft.com'
   - '+.zft.com'
   - '+.zfvnet.com'
-  - '+.zfw.me'
   - '+.zfw.net'
   - '+.zfwimg.com'
   - '+.zg-import.com'
@@ -63316,7 +63292,6 @@ payload:
   - '+.zhenimg.com'
   - '+.zhenjiang-marathon.com'
   - '+.zhenleishan.com'
-  - '+.zhenlinxin.com'
   - '+.zhenlishen.com'
   - '+.zhenpin.com'
   - '+.zhenren.com'
@@ -64534,6 +64509,7 @@ payload:
   - '+.zol-img.com'
   - '+.zol.com'
   - '+.zollty.com'
+  - '+.zolojo.com'
   - '+.zolsky.com'
   - '+.zombiescat.com'
   - '+.zomiu.com'
@@ -64955,7 +64931,6 @@ payload:
   - '+.zw808.com'
   - '+.zw885.com'
   - '+.zwads.com'
-  - '+.zwbk.org'
   - '+.zwcad.com'
   - '+.zwcnw.com'
   - '+.zwcsm.com'
@@ -65245,7 +65220,6 @@ payload:
   - '+.zzyb.org'
   - '+.zzydb.com'
   - '+.zzyedu.org'
-  - '+.zzyichen.net'
   - '+.zzyiquan.com'
   - '+.zzyjsmba.com'
   - '+.zzyyrl.com'
