--- a/directbak.yaml
+++ b/directbak.yaml
@@ -65,7 +65,6 @@ payload:
   - '+.00ic.com'
   - '+.00it.net'
   - '+.00lewen.com'
-  - '+.00red.com'
   - '+.00tera.com'
   - '+.00txt.com'
   - '+.00wv.com'
@@ -1582,7 +1581,6 @@ payload:
   - '+.17mf.com'
   - '+.17miyou.com'
   - '+.17mqw.com'
-  - '+.17mr.org'
   - '+.17ms.com'
   - '+.17neo.com'
   - '+.17oh.com'
@@ -2453,6 +2451,7 @@ payload:
   - '+.2jianli.com'
   - '+.2k2k.com'
   - '+.2kandy.com'
+  - '+.2kb.com'
   - '+.2ktq.com'
   - '+.2ktvb.com'
   - '+.2kxs.org'
@@ -5862,7 +5861,6 @@ payload:
   - '+.7road.net'
   - '+.7runto.com'
   - '+.7rv.net'
-  - '+.7scs.com'
   - '+.7sdn.com'
   - '+.7sheji.com'
   - '+.7sj.com'
@@ -7199,7 +7197,6 @@ payload:
   - '+.a2048.com'
   - '+.a21fs.com'
   - '+.a21yishion.com'
-  - '+.a234567.com'
   - '+.a2dongman.com'
   - '+.a4s6.com'
   - '+.a5.net'
@@ -8090,6 +8087,7 @@ payload:
   - '+.aizongyi.com'
   - '+.aizuna.com'
   - '+.aizuopin.com'
+  - '+.aj4j.icu'
   - '+.ajaxjs.com'
   - '+.ajaxstu.com'
   - '+.ajbbkf.com'
@@ -8645,7 +8643,6 @@ payload:
   - '+.anruichina.com'
   - '+.ansbabe.com'
   - '+.ansgo.com'
-  - '+.anshi7.com'
   - '+.ansiding.com'
   - '+.ansky.com'
   - '+.ansteelgroup.com'
@@ -11316,7 +11313,6 @@ payload:
   - '+.bjzghd.com'
   - '+.bjzgxr.net'
   - '+.bjzhishi.com'
-  - '+.bjzhongxinjiancai.com'
   - '+.bjzhongyi.com'
   - '+.bjzjgyl.com'
   - '+.bjzkhs.com'
@@ -12389,7 +12385,6 @@ payload:
   - '+.cainiaojiaocheng.com'
   - '+.cainiaoqidian.com'
   - '+.cainiaoxueyuan.com'
-  - '+.cainu.net'
   - '+.caipiaogu.com'
   - '+.caipintu.com'
   - '+.caipopo.com'
@@ -13429,7 +13424,6 @@ payload:
   - '+.chafanhou.com'
   - '+.chafei.net'
   - '+.chahaotai.com'
-  - '+.chaheji.com'
   - '+.chahua.org'
   - '+.chahuo.com'
   - '+.chaic.com'
@@ -13764,7 +13758,6 @@ payload:
   - '+.chenlianfu.com'
   - '+.chenlinux.com'
   - '+.chenlinzuwu.com'
-  - '+.chenlongyx.com'
   - '+.chenmomo.com'
   - '+.chenpeng.info'
   - '+.chenplus.com'
@@ -16367,7 +16360,6 @@ payload:
   - '+.cpubbs.com'
   - '+.cpupack.com'
   - '+.cpvjob.com'
-  - '+.cpxco.net'
   - '+.cpxsxk.com'
   - '+.cpython.org'
   - '+.cpzjzx.com'
@@ -16574,6 +16566,7 @@ payload:
   - '+.creditcn.com'
   - '+.creditsailing.com'
   - '+.creditxb.com'
+  - '+.creditzuji.com'
   - '+.creke.net'
   - '+.creo-support.com'
   - '+.crestv.com'
@@ -17674,6 +17667,7 @@ payload:
   - '+.dawenxue.org'
   - '+.dawndiy.com'
   - '+.dawnlab.me'
+  - '+.dawnled.net'
   - '+.dawuhanapp.com'
   - '+.dawuxia.net'
   - '+.dawx.com'
@@ -17943,7 +17937,6 @@ payload:
   - '+.deelplumbing.com'
   - '+.deemob.com'
   - '+.deemos.com'
-  - '+.deepai.com'
   - '+.deepano.com'
   - '+.deepaso.com'
   - '+.deepba.com'
@@ -18731,7 +18724,6 @@ payload:
   - '+.dm0571.com'
   - '+.dm176.com'
   - '+.dm300.com'
-  - '+.dm321.com'
   - '+.dm321.net'
   - '+.dm4mm.com'
   - '+.dm5.com'
@@ -20230,7 +20222,6 @@ payload:
   - '+.edmcn.net'
   - '+.edns.com'
   - '+.edodocs.com'
-  - '+.edogantt.com'
   - '+.edojia.com'
   - '+.edojs.com'
   - '+.edong.com'
@@ -20761,7 +20752,6 @@ payload:
   - '+.epjob88.com'
   - '+.epkey.com'
   - '+.eplove.com'
-  - '+.epmao.com'
   - '+.epoos.com'
   - '+.eprezi.com'
   - '+.eps114.com'
@@ -21813,7 +21803,6 @@ payload:
   - '+.feling.net'
   - '+.felink.com'
   - '+.felix021.com'
-  - '+.femba.net'
   - '+.femrice.com'
   - '+.fenbaner.net'
   - '+.fenbei.com'
@@ -21841,7 +21830,6 @@ payload:
   - '+.fengcms.com'
   - '+.fengcx.com'
   - '+.fengdu.com'
-  - '+.fengdzq.com'
   - '+.fengedu.com'
   - '+.fengeek.com'
   - '+.fengeini.com'
@@ -30834,6 +30822,7 @@ payload:
   - '+.j-smu.com'
   - '+.j1.com'
   - '+.j1health.com'
+  - '+.j5k6.com'
   - '+.j66.net'
   - '+.j7994.com'
   - '+.j888s.xyz'
@@ -40687,7 +40676,6 @@ payload:
   - '+.njjuntong.com'
   - '+.njkefayuan.com'
   - '+.njl114.com'
-  - '+.njlaowu.com'
   - '+.njlike.com'
   - '+.njlingyun.com'
   - '+.njljjy.com'
@@ -41915,6 +41903,7 @@ payload:
   - '+.pageadmin.net'
   - '+.pagechoice.com'
   - '+.pagechoice.net'
+  - '+.pageseagle.com'
   - '+.pagurian.com'
   - '+.pahaoche.com'
   - '+.pahou.com'
@@ -43140,6 +43129,7 @@ payload:
   - '+.proginn.com'
   - '+.programfan.com'
   - '+.programmer.group'
+  - '+.programmer.ink'
   - '+.programschool.com'
   - '+.progressingeography.com'
   - '+.prohui.com'
@@ -46442,7 +46432,6 @@ payload:
   - '+.sdhsie.com'
   - '+.sdhuxiji.com'
   - '+.sdhxnykj.com'
-  - '+.sdhysyyxgs.com'
   - '+.sdiandian.com'
   - '+.sdiborn.com'
   - '+.sdiccapital.com'
@@ -49275,6 +49264,7 @@ payload:
   - '+.sszjnc.com'
   - '+.sszzz.com'
   - '+.st001.com'
+  - '+.st12121.net'
   - '+.st123.com'
   - '+.st180.com'
   - '+.stackboom.xin'
@@ -51118,7 +51108,6 @@ payload:
   - '+.thatinterpreter.net'
   - '+.thatsmags.com'
   - '+.thatsmandarin.com'
-  - '+.thbattle.net'
   - '+.thcad.net'
   - '+.thcantech.com'
   - '+.thdb.com'
@@ -54125,7 +54114,6 @@ payload:
   - '+.vpser.net'
   - '+.vpsjie.com'
   - '+.vpsjxw.com'
-  - '+.vpsmm.com'
   - '+.vpsoff.net'
   - '+.vpsor.com'
   - '+.vpsqb.com'
@@ -56287,7 +56275,6 @@ payload:
   - '+.woodbunny.com'
   - '+.wooddb.com'
   - '+.woodnn.com'
-  - '+.wooee.net'
   - '+.wooffice.net'
   - '+.woola.net'
   - '+.wooolab.com'
@@ -57392,6 +57379,7 @@ payload:
   - '+.xfxb.net'
   - '+.xfyousheng.com'
   - '+.xfyun.com'
+  - '+.xfyxfy.com'
   - '+.xfzhsf.com'
   - '+.xfztc.com'
   - '+.xfzyun.com'
@@ -58371,6 +58359,7 @@ payload:
   - '+.xinxiaochina.com'
   - '+.xinxiaodian.com'
   - '+.xinxiaoqi.com'
+  - '+.xinxiaozu.com'
   - '+.xinxifabu.net'
   - '+.xinxinapp.net'
   - '+.xinxindai.com'
@@ -58726,7 +58715,6 @@ payload:
   - '+.xmcp.ltd'
   - '+.xmcwh.com'
   - '+.xmcx.net'
-  - '+.xmcymg.com'
   - '+.xmd5.com'
   - '+.xmdpwh.com'
   - '+.xmeasygo.com'
@@ -58915,7 +58903,6 @@ payload:
   - '+.xqiushu.com'
   - '+.xqjmzc.com'
   - '+.xqjs.net'
-  - '+.xqkqk.com'
   - '+.xqnmz.com'
   - '+.xqsbw.com'
   - '+.xqship.com'
@@ -63655,7 +63642,6 @@ payload:
   - '+.zhongkongbancn.com'
   - '+.zhongkongdaikuan.com'
   - '+.zhongleny.com'
-  - '+.zhonglewz.com'
   - '+.zhonglian.com'
   - '+.zhonglianfactoring.com'
   - '+.zhongliucls.com'
@@ -65154,6 +65140,7 @@ payload:
   - '+.zzd.pub'
   - '+.zzdengji.com'
   - '+.zzdh.net'
+  - '+.zzdtec.com'
   - '+.zzdz666.com'
   - '+.zzect.com'
   - '+.zzenglish.net'
