--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1155,6 +1155,7 @@ payload:
   - '+.12ym.com'
   - '+.12ystar.com'
   - '+.13.gs'
+  - '+.130014.xyz'
   - '+.130158.com'
   - '+.131.com'
   - '+.13112.com'
@@ -1553,7 +1554,6 @@ payload:
   - '+.17getfun.com'
   - '+.17gwx.com'
   - '+.17haibao.com'
-  - '+.17heli.com'
   - '+.17house.com'
   - '+.17hpl.com'
   - '+.17huang.com'
@@ -5249,6 +5249,7 @@ payload:
   - '+.662p.com'
   - '+.6631.com'
   - '+.663395.net'
+  - '+.66377311795.com'
   - '+.66378.com'
   - '+.66460.com'
   - '+.6655.la'
@@ -6900,6 +6901,7 @@ payload:
   - '+.9823df.com'
   - '+.984g.com'
   - '+.985.so'
+  - '+.985dh.com'
   - '+.985sy.com'
   - '+.98654.com'
   - '+.987.com'
@@ -7532,6 +7534,7 @@ payload:
   - '+.adtiming.com'
   - '+.adtmm.com'
   - '+.adubest.com'
+  - '+.adukwai.com'
   - '+.adunicorn.com'
   - '+.adunioncode.com'
   - '+.adunite.com'
@@ -8988,7 +8991,6 @@ payload:
   - '+.appying.com'
   - '+.appykt.com'
   - '+.appzhonghua.com'
-  - '+.appzhu.com'
   - '+.apqianzhuo.com'
   - '+.apsgo.com'
   - '+.apt.so'
@@ -12696,7 +12698,6 @@ payload:
   - '+.ccchz.com'
   - '+.cccitu.com'
   - '+.cccity.cc'
-  - '+.ccciw.com'
   - '+.cccmat.com'
   - '+.cccnec.com'
   - '+.cccollector.com'
@@ -14693,6 +14694,7 @@ payload:
   - '+.chrice.net'
   - '+.chrieschina.com'
   - '+.chris-tina.com'
+  - '+.christophero.xyz'
   - '+.chrmn.com'
   - '+.chromecj.com'
   - '+.chromedownloads.net'
@@ -15501,7 +15503,6 @@ payload:
   - '+.cndhotels.com'
   - '+.cndids.com'
   - '+.cndingxi.com'
-  - '+.cndkc.net'
   - '+.cndns.com'
   - '+.cndns5.com'
   - '+.cndoornet.com'
@@ -18814,6 +18815,7 @@ payload:
   - '+.dns6132.com'
   - '+.dns6868.com'
   - '+.dns800.com'
+  - '+.dnsbn.com'
   - '+.dnsce.com'
   - '+.dnscnc.com'
   - '+.dnsddos.com'
@@ -24442,8 +24444,10 @@ payload:
   - '+.gtm-a4b9.com'
   - '+.gtm-a5b4.com'
   - '+.gtm-i1d1.com'
+  - '+.gtm-i1d2.com'
   - '+.gtm-i1d6.com'
   - '+.gtm-i1d7.com'
+  - '+.gtm-i1d8.com'
   - '+.gtm-i1d9.com'
   - '+.gtm-i2d8.com'
   - '+.gtmlufax.com'
@@ -33913,7 +33917,6 @@ payload:
   - '+.kj-pcb.com'
   - '+.kj1d.com'
   - '+.kj3.com'
-  - '+.kj5544.com'
   - '+.kjb2c.com'
   - '+.kjcad.net'
   - '+.kjcdn.com'
@@ -34606,6 +34609,7 @@ payload:
   - '+.kveii.com'
   - '+.kvemm.com'
   - '+.kvenjoy.com'
+  - '+.kvevv.com'
   - '+.kvezz.com'
   - '+.kvhcc.com'
   - '+.kvhee.com'
@@ -36940,7 +36944,6 @@ payload:
   - '+.lujun9972.win'
   - '+.lukachen.com'
   - '+.lukaplayer.com'
-  - '+.lukeer.com'
   - '+.lukiya.com'
   - '+.lukou.com'
   - '+.lukuanart.com'
@@ -44125,7 +44128,6 @@ payload:
   - '+.qiue21.com'
   - '+.qiufaqf.com'
   - '+.qiufengblog.com'
-  - '+.qiugonglue.com'
   - '+.qiugouxinxi.net'
   - '+.qiujiaoyou.net'
   - '+.qiujieyl.com'
@@ -45771,6 +45773,7 @@ payload:
   - '+.ruanwenclass.com'
   - '+.ruanwenkezhan.com'
   - '+.ruanwenlala.com'
+  - '+.ruanyu8.xyz'
   - '+.ruanyuan.net'
   - '+.rubaoo.com'
   - '+.ruby-china.com'
@@ -52312,6 +52315,7 @@ payload:
   - '+.ttsfgyrj.com'
   - '+.ttshengbei.com'
   - '+.ttsmmwb.com'
+  - '+.ttsq.xyz'
   - '+.ttsq6.net'
   - '+.ttstream.com'
   - '+.ttsz8.com'
@@ -52944,6 +52948,7 @@ payload:
   - '+.ucdrs.net'
   - '+.ucdwhatif.com'
   - '+.ucfly.com'
+  - '+.ucfma.com'
   - '+.ucfpay.com'
   - '+.uchangdi.com'
   - '+.uchiha.ltd'
@@ -57174,7 +57179,6 @@ payload:
   - '+.xbwbh.com'
   - '+.xbwebyun.com'
   - '+.xbxgame.com'
-  - '+.xbxwx.org'
   - '+.xbxxb.com'
   - '+.xbxxz.com'
   - '+.xbzlapp.com'
@@ -57556,7 +57560,6 @@ payload:
   - '+.xiangshi.cc'
   - '+.xiangshi123.com'
   - '+.xiangshu.net'
-  - '+.xiangshuiping.com'
   - '+.xiangsidi.com'
   - '+.xiangsw.com'
   - '+.xiangtaole.com'
@@ -62901,7 +62904,6 @@ payload:
   - '+.zglscom.com'
   - '+.zglww.net'
   - '+.zglxw.com'
-  - '+.zglzb.com'
   - '+.zglzh.com'
   - '+.zgmcxw.com'
   - '+.zgmdbw.com'
