--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3631,6 +3631,7 @@ payload:
   - '+.5054399.net'
   - '+.505gg.com'
   - '+.505uu.com'
+  - '+.5064.tw'
   - '+.5066.net'
   - '+.5068.com'
   - '+.5068yx.com'
@@ -6739,7 +6740,6 @@ payload:
   - '+.94qy.com'
   - '+.94rp.com'
   - '+.94te.com'
-  - '+.94uv.com'
   - '+.94xy.com'
   - '+.94you.net'
   - '+.94ys.com'
@@ -9933,7 +9933,6 @@ payload:
   - '+.bao-cun.com'
   - '+.bao-fang.com'
   - '+.bao-hulu.com'
-  - '+.bao-jian.net'
   - '+.bao100.com'
   - '+.bao12333.com'
   - '+.bao21.com'
@@ -9942,7 +9941,6 @@ payload:
   - '+.baobabnet.com'
   - '+.baobao.com'
   - '+.baobao001.com'
-  - '+.baobao18.com'
   - '+.baobao88.com'
   - '+.baobaobang.com'
   - '+.baobaoshu.com'
@@ -11103,7 +11101,6 @@ payload:
   - '+.bjcta.net'
   - '+.bjcurio.com'
   - '+.bjcxdf.com'
-  - '+.bjcxzx.com'
   - '+.bjcyzg.com'
   - '+.bjczxt.com'
   - '+.bjdachi.com'
@@ -11455,7 +11452,6 @@ payload:
   - '+.blyol.com'
   - '+.blyun.com'
   - '+.bm001.com'
-  - '+.bm023.com'
   - '+.bm2088.com'
   - '+.bm724.com'
   - '+.bm777777.com'
@@ -13743,7 +13739,6 @@ payload:
   - '+.chengyuwb.com'
   - '+.chengzhongmugu.vip'
   - '+.chengzhongmugu.wang'
-  - '+.chengzi520.com'
   - '+.chengzijianzhan.cc'
   - '+.chengzijianzhan.com'
   - '+.chengzivr.com'
@@ -17371,7 +17366,6 @@ payload:
   - '+.daixiaorui.com'
   - '+.daiyanbao.com'
   - '+.daiyanmama.com'
-  - '+.daizhuzai.com'
   - '+.daizitouxiang.com'
   - '+.daji.com'
   - '+.dajiabao.com'
@@ -17644,7 +17638,6 @@ payload:
   - '+.datathinking.com'
   - '+.datathinking.net'
   - '+.datatist.com'
-  - '+.dataunion.net'
   - '+.datayes.com'
   - '+.datazt.com'
   - '+.datebao.com'
@@ -18953,7 +18946,6 @@ payload:
   - '+.domp4.cc'
   - '+.domp4.com'
   - '+.domyshop.com'
-  - '+.doname.com'
   - '+.donews.com'
   - '+.dong-shou.com'
   - '+.dong-xu.com'
@@ -20723,7 +20715,6 @@ payload:
   - '+.eoriver.com'
   - '+.eorzea.moe'
   - '+.eosantpool.com'
-  - '+.eospark.com'
   - '+.eovas.net'
   - '+.ep-china.net'
   - '+.epaas.net'
@@ -26445,7 +26436,6 @@ payload:
   - '+.hexianrc.com'
   - '+.hexiaoxiang.com'
   - '+.hexicomtech.com'
-  - '+.hexie168.com'
   - '+.hexilai.com'
   - '+.hexindai.com'
   - '+.hexinli.org'
@@ -27370,7 +27360,6 @@ payload:
   - '+.houkai.com'
   - '+.houpuwang.com'
   - '+.houqinbao.com'
-  - '+.houqun.me'
   - '+.houqun.net'
   - '+.houquner.com'
   - '+.house086.com'
@@ -28595,7 +28584,6 @@ payload:
   - '+.hzdx.com'
   - '+.hzecsemir.com'
   - '+.hzeg.com'
-  - '+.hzfangwang.com'
   - '+.hzfc.cc'
   - '+.hzfucai.net'
   - '+.hzgh.org'
@@ -31447,7 +31435,6 @@ payload:
   - '+.jiapuvip.com'
   - '+.jiaren.org'
   - '+.jiarenvip.com'
-  - '+.jiarui.cc'
   - '+.jiasale.com'
   - '+.jiashuangkuaizi.com'
   - '+.jiashule.com'
@@ -32574,7 +32561,6 @@ payload:
   - '+.jsd.cc'
   - '+.jsdaima.com'
   - '+.jsdcly.com'
-  - '+.jsddlzz.com'
   - '+.jsdthx.com'
   - '+.jsdujuan.com'
   - '+.jseepub.com'
@@ -32655,7 +32641,6 @@ payload:
   - '+.jsp51.com'
   - '+.jspang.com'
   - '+.jspatch.com'
-  - '+.jspcn.net'
   - '+.jspeople.com'
   - '+.jspxcms.com'
   - '+.jsq001.com'
@@ -33004,7 +32989,6 @@ payload:
   - '+.jw100.net'
   - '+.jwappgc.com'
   - '+.jwbl.com'
-  - '+.jwdedu.com'
   - '+.jwdili.com'
   - '+.jwdns.com'
   - '+.jwetech.com'
@@ -38489,7 +38473,6 @@ payload:
   - '+.michael-j.net'
   - '+.michaelapp.com'
   - '+.micheal.wang'
-  - '+.michelam.com'
   - '+.michong.com'
   - '+.michplay.com'
   - '+.miclle.com'
@@ -38841,7 +38824,6 @@ payload:
   - '+.mjceo.com'
   - '+.mjh5.com'
   - '+.mjia.cc'
-  - '+.mjj.edu.ge'
   - '+.mjjcn.com'
   - '+.mjjq.com'
   - '+.mjju.net'
@@ -40050,7 +40032,6 @@ payload:
   - '+.nanlebbs.com'
   - '+.nanlive.com'
   - '+.nanoer.net'
-  - '+.nanopi.org'
   - '+.nanputuo.com'
   - '+.nanqi.org'
   - '+.nanrenbang.in'
@@ -42405,7 +42386,6 @@ payload:
   - '+.phdwu.com'
   - '+.phedu.net'
   - '+.phezzan.com'
-  - '+.phida.net'
   - '+.philipswechat.com'
   - '+.phlexing.com'
   - '+.phnamedns.com'
@@ -42695,7 +42675,6 @@ payload:
   - '+.pipipifa.com'
   - '+.pipiti.com'
   - '+.pipix.com'
-  - '+.pipiyys.com'
   - '+.pipsemi.com'
   - '+.piqs.com'
   - '+.piscesys.com'
@@ -42865,7 +42844,6 @@ payload:
   - '+.pobaby.net'
   - '+.pobasoft.com'
   - '+.pobiji001.com'
-  - '+.poboo.com'
   - '+.pocketdigi.com'
   - '+.pocketuni.net'
   - '+.pocomagnetic.com'
@@ -44880,7 +44858,6 @@ payload:
   - '+.qy.net'
   - '+.qy266.com'
   - '+.qy6.com'
-  - '+.qy6.net'
   - '+.qyaaaa.com'
   - '+.qybeiyong.com'
   - '+.qyc2008.com'
@@ -47490,7 +47467,6 @@ payload:
   - '+.shjh120.com'
   - '+.shjhjc.com'
   - '+.shjob.work'
-  - '+.shjoycity.com'
   - '+.shjsit.com'
   - '+.shjt.net'
   - '+.shjxfc.com'
@@ -50770,6 +50746,7 @@ payload:
   - '+.tc199.net'
   - '+.tc9011.com'
   - '+.tc930.com'
+  - '+.tccaijing.com'
   - '+.tccqb.com'
   - '+.tccxfw.com'
   - '+.tcdai.com'
@@ -52977,7 +52954,6 @@ payload:
   - '+.ucuuc.com'
   - '+.ucw.pub'
   - '+.ucweb.com'
-  - '+.ucxinwen.com'
   - '+.ucying.com'
   - '+.uczhidao.com'
   - '+.ucziliao.com'
@@ -55610,7 +55586,6 @@ payload:
   - '+.whlkwy.com'
   - '+.whlongre.com'
   - '+.whlrhd.com'
-  - '+.whlxhs.net'
   - '+.whly56.com'
   - '+.whlynk.com'
   - '+.whmama.com'
@@ -58464,7 +58439,6 @@ payload:
   - '+.xitouwang.com'
   - '+.xitu.io'
   - '+.xituan.com'
-  - '+.xituju.com'
   - '+.xiu.com'
   - '+.xiu8.com'
   - '+.xiuai.com'
@@ -58927,7 +58901,6 @@ payload:
   - '+.xrwcn.com'
   - '+.xs-servers.com'
   - '+.xs.la'
-  - '+.xs1h.com'
   - '+.xs222.tw'
   - '+.xs2500.com'
   - '+.xs3cnc.com'
@@ -59473,7 +59446,6 @@ payload:
   - '+.xyqka.com'
   - '+.xyrtv.com'
   - '+.xysb.com'
-  - '+.xyshu8.net'
   - '+.xyssdzrmzf.com'
   - '+.xystatic.com'
   - '+.xystoy.com'
@@ -60914,15 +60886,11 @@ payload:
   - '+.ymrcw.vip'
   - '+.ymsteam.com'
   - '+.ymstj.xyz'
-  - '+.ymsxq001.xyz'
   - '+.ymsxq002.pw'
   - '+.ymsxq003.pw'
   - '+.ymsxq004.pw'
-  - '+.ymsxq005.xyz'
   - '+.ymsxq007.pw'
   - '+.ymsxq009.pw'
-  - '+.ymsxq009.xyz'
-  - '+.ymsxqcdn.xyz'
   - '+.ymt.com'
   - '+.ymt360.com'
   - '+.ymtc.com'
@@ -61462,7 +61430,6 @@ payload:
   - '+.ypk.cc'
   - '+.yplady.com'
   - '+.yplmzx.com'
-  - '+.yppp.shop'
   - '+.ypppt.com'
   - '+.ypshengxian.com'
   - '+.ypstech.com'
@@ -62962,6 +62929,7 @@ payload:
   - '+.zgwgfw.com'
   - '+.zgwhfe.com'
   - '+.zgwhw.com'
+  - '+.zgwlcsj.com'
   - '+.zgwt.co'
   - '+.zgwxbbs.com'
   - '+.zgxcfx.com'
