--- a/directbak.yaml
+++ b/directbak.yaml
@@ -507,7 +507,6 @@ payload:
   - '+.0737rencai.com'
   - '+.0738.cc'
   - '+.0738rc.com'
-  - '+.0738www.com'
   - '+.0739tt.com'
   - '+.073img.com'
   - '+.07430743.com'
@@ -1872,7 +1871,6 @@ payload:
   - '+.1nyz.com'
   - '+.1o26.com'
   - '+.1p1g.com'
-  - '+.1peixun.com'
   - '+.1pm2.com'
   - '+.1ppt.com'
   - '+.1q2q.com'
@@ -4017,7 +4015,6 @@ payload:
   - '+.51nuoqi.com'
   - '+.51nwt.com'
   - '+.51offer.com'
-  - '+.51okf.com'
   - '+.51onb.com'
   - '+.51oneone.com'
   - '+.51onion.com'
@@ -4382,6 +4379,7 @@ payload:
   - '+.52dns.com'
   - '+.52doc.com'
   - '+.52dr.net'
+  - '+.52dsy.com'
   - '+.52dtv.com'
   - '+.52dyy.com'
   - '+.52dzc.com'
@@ -5365,7 +5363,6 @@ payload:
   - '+.6868.com'
   - '+.6868shop.com'
   - '+.688799a.com'
-  - '+.688n.com'
   - '+.6899wan.com'
   - '+.68eg.com'
   - '+.68gainian.com'
@@ -6077,7 +6074,6 @@ payload:
   - '+.84ktv.com'
   - '+.84zcb.com'
   - '+.84zhu.com'
-  - '+.85.com'
   - '+.8518.com'
   - '+.8521.org'
   - '+.85229666.com'
@@ -6711,7 +6707,6 @@ payload:
   - '+.942ss.com'
   - '+.944.com'
   - '+.94445.com'
-  - '+.9448x.com'
   - '+.9453job.com'
   - '+.945idc.com'
   - '+.945n48.com'
@@ -6905,7 +6900,6 @@ payload:
   - '+.985sy.com'
   - '+.98654.com'
   - '+.987.com'
-  - '+.9870n.com'
   - '+.9871.org'
   - '+.987app.com'
   - '+.987jx.com'
@@ -7243,6 +7237,7 @@ payload:
   - '+.ab95569.com'
   - '+.abab.com'
   - '+.abacaipu.com'
+  - '+.abackup.com'
   - '+.abakua.com'
   - '+.abang.com'
   - '+.abardeen-online.com'
@@ -11988,7 +11983,6 @@ payload:
   - '+.butterapis.com'
   - '+.buxia.net'
   - '+.buxiugangban.net'
-  - '+.buy360.vip'
   - '+.buyanshufa.com'
   - '+.buyaocha.com'
   - '+.buycarcn.com'
@@ -12011,6 +12005,7 @@ payload:
   - '+.bvgv.com'
   - '+.bvimg.com'
   - '+.bvseo.com'
+  - '+.bvttsg.com'
   - '+.bw1006.com'
   - '+.bw3.site'
   - '+.bw30yun.com'
@@ -13400,7 +13395,6 @@ payload:
   - '+.ch.com'
   - '+.ch028.net'
   - '+.ch12333.com'
-  - '+.ch318.com'
   - '+.ch999.com'
   - '+.ch999img.com'
   - '+.cha-tm.com'
@@ -14698,7 +14692,6 @@ payload:
   - '+.chronusartcenter.org'
   - '+.chroyoo.com'
   - '+.chrstatic.com'
-  - '+.chs.so'
   - '+.chshcms.com'
   - '+.chshouyu.com'
   - '+.chsqh.com'
@@ -14915,7 +14908,6 @@ payload:
   - '+.cignacmb.com'
   - '+.cihai123.com'
   - '+.cihexpo.com'
-  - '+.ciia-if.org'
   - '+.ciicgat.com'
   - '+.ciidoo.com'
   - '+.ciie.org'
@@ -15306,6 +15298,7 @@ payload:
   - '+.cmpay.com'
   - '+.cmread.com'
   - '+.cmri.cc'
+  - '+.cms-live.pandora.net'
   - '+.cms1924.org'
   - '+.cmsblogs.com'
   - '+.cmschina.com'
@@ -16906,7 +16899,6 @@ payload:
   - '+.cuishuai.cc'
   - '+.cuiuc.com'
   - '+.cuiweijuxing.com'
-  - '+.cuixx.com'
   - '+.cuiyongjian.com'
   - '+.cuketest.com'
   - '+.cul-studies.com'
@@ -17476,6 +17468,7 @@ payload:
   - '+.daniujiaoyu.com'
   - '+.danji100.com'
   - '+.danji8.com'
+  - '+.danji9.com'
   - '+.danjiali.com'
   - '+.danjuanapp.com'
   - '+.danjuanfunds.com'
@@ -19562,7 +19555,6 @@ payload:
   - '+.dushijia.com'
   - '+.dushiliren.net'
   - '+.dushitiyan.com'
-  - '+.dushiyufu.com'
   - '+.dushu.com'
   - '+.dushu.io'
   - '+.dushu263.com'
@@ -20342,7 +20334,6 @@ payload:
   - '+.eeyy.com'
   - '+.eezml.com'
   - '+.ef-cdn.com'
-  - '+.ef-school.com'
   - '+.ef360.com'
   - '+.ef360.net'
   - '+.ef82.com'
@@ -20776,6 +20767,7 @@ payload:
   - '+.eqxiuzhan.com'
   - '+.eqyn.com'
   - '+.eqz.cc'
+  - '+.er236.com'
   - '+.eraclean.com'
   - '+.eran123.com'
   - '+.eranet-dns.com'
@@ -20873,6 +20865,7 @@ payload:
   - '+.esouti.com'
   - '+.esoyu.com'
   - '+.espnlol.com'
+  - '+.esr.com'
   - '+.essaystar.com'
   - '+.essca.com'
   - '+.essclick.com'
@@ -21255,7 +21248,6 @@ payload:
   - '+.f5yx.com'
   - '+.f773.com'
   - '+.f7777.net'
-  - '+.f79891d4dc96.com'
   - '+.fa-today.com'
   - '+.fa597.com'
   - '+.fa68.com'
@@ -23949,6 +23941,7 @@ payload:
   - '+.godida.com'
   - '+.godiscoder.com'
   - '+.godiy8.com'
+  - '+.godns.site'
   - '+.godo.pub'
   - '+.godoor.com'
   - '+.godotdotdot.com'
@@ -25614,6 +25607,7 @@ payload:
   - '+.haokongbu1.com'
   - '+.haokoo.com'
   - '+.haoku.net'
+  - '+.haokuaiya.com'
   - '+.haolangtech.com'
   - '+.haolawyer.com'
   - '+.haole.com'
@@ -27213,6 +27207,7 @@ payload:
   - '+.honghe-tech.com'
   - '+.hongheiku.com'
   - '+.honghonghu.com'
+  - '+.honghuahui.xyz'
   - '+.honghuotai.com'
   - '+.hongjiang.info'
   - '+.hongjiejia.com'
@@ -27416,7 +27411,6 @@ payload:
   - '+.hq88.com'
   - '+.hqbd.com'
   - '+.hqbnb.com'
-  - '+.hqbpc.com'
   - '+.hqbsh.com'
   - '+.hqbuy.com'
   - '+.hqbuycdn.com'
@@ -28179,6 +28173,7 @@ payload:
   - '+.hunanzhibo.com'
   - '+.hunbei.com'
   - '+.hunbei1.com'
+  - '+.hunbei2.com'
   - '+.hunbei3.com'
   - '+.hunbei4.com'
   - '+.hunbei5.com'
@@ -29399,7 +29394,6 @@ payload:
   - '+.ihanhua.com'
   - '+.ihani.tv'
   - '+.ihanshi.com'
-  - '+.ihaoge.net'
   - '+.ihaoxi.com'
   - '+.ihaozhuo.com'
   - '+.ihappy.vip'
@@ -31784,7 +31778,6 @@ payload:
   - '+.jinke3d.com'
   - '+.jinkejoy.com'
   - '+.jinkex.com'
-  - '+.jinkongjianshe.com'
   - '+.jinkosolar.com'
   - '+.jinku.com'
   - '+.jinlaiba.com'
@@ -34596,8 +34589,10 @@ payload:
   - '+.kvevv.com'
   - '+.kvezz.com'
   - '+.kvhcc.com'
+  - '+.kvhdd.com'
   - '+.kvhee.com'
   - '+.kvhmm.com'
+  - '+.kvhnn.com'
   - '+.kviso.com'
   - '+.kvkft.com'
   - '+.kvogues.com'
@@ -34692,6 +34687,7 @@ payload:
   - '+.kz8yx.com'
   - '+.kza.cc'
   - '+.kzecc.com'
+  - '+.kzerr.com'
   - '+.kzore.com'
   - '+.kzt.cc'
   - '+.kztpms.com'
@@ -34732,7 +34728,6 @@ payload:
   - '+.ladydaily.com'
   - '+.ladymetro.com'
   - '+.ladystr.com'
-  - '+.ladywu.net'
   - '+.lafaso.com'
   - '+.lafhzx.com'
   - '+.lagou.com'
@@ -35093,6 +35088,7 @@ payload:
   - '+.lbbniu.com'
   - '+.lbd99.com'
   - '+.lbddd.com'
+  - '+.lbdj.com'
   - '+.lbdz.cc'
   - '+.lbesec.com'
   - '+.lbgoo.com'
@@ -35320,6 +35316,7 @@ payload:
   - '+.leiting.com'
   - '+.leitingcn.com'
   - '+.leitingjunshi.com'
+  - '+.leitool.com'
   - '+.leiue.com'
   - '+.leiyunge.com'
   - '+.leiyunge.net'
@@ -38585,6 +38582,7 @@ payload:
   - '+.mikesent-awareness-02.com'
   - '+.mikesent.net'
   - '+.mikewootc.com'
+  - '+.miko007.com'
   - '+.mikoshu.me'
   - '+.miku.ink'
   - '+.miku4567.com'
@@ -38806,6 +38804,7 @@ payload:
   - '+.miyabaobei.com'
   - '+.miyabaobei.hk'
   - '+.miyaboke.com'
+  - '+.miyachat.com'
   - '+.miyanlife.com'
   - '+.miyapay.com'
   - '+.miyatech.com'
@@ -39051,7 +39050,6 @@ payload:
   - '+.modianverse.com'
   - '+.modooplay.com'
   - '+.modulesocean.com'
-  - '+.moduovr.com'
   - '+.moduseo.com'
   - '+.modusnb.com'
   - '+.modxz.com'
@@ -44750,7 +44748,6 @@ payload:
   - '+.ququzhu.com'
   - '+.qusanxia.com'
   - '+.qusem.com'
-  - '+.qushimeiti.com'
   - '+.qushiw.com'
   - '+.qushixi.net'
   - '+.qushoumiao.com'
@@ -45972,6 +45969,7 @@ payload:
   - '+.saibeiip.com'
   - '+.saibeinews.com'
   - '+.saibo.com'
+  - '+.saiboauto.com'
   - '+.saic-audi.mobi'
   - '+.saic-gm.com'
   - '+.saicdt.com'
@@ -46478,6 +46476,7 @@ payload:
   - '+.sdx.microsoft.com'
   - '+.sdxczn.com'
   - '+.sdxietong.com'
+  - '+.sdxinboao.com'
   - '+.sdxitong.com'
   - '+.sdxjpc.com'
   - '+.sdxvisa.com'
@@ -49441,7 +49440,6 @@ payload:
   - '+.suanning.com'
   - '+.suanst.com'
   - '+.suanya.com'
-  - '+.suaooo.com'
   - '+.suapp.me'
   - '+.subangjia.com'
   - '+.subaonet.com'
@@ -51439,6 +51437,7 @@ payload:
   - '+.timeofdate.com'
   - '+.timeoutbeijing.com'
   - '+.timeoutcn.com'
+  - '+.timeoutshanghai.com'
   - '+.timepill.net'
   - '+.timeread.com'
   - '+.timeread.net'
@@ -51642,7 +51641,6 @@ payload:
   - '+.tlyy.cc'
   - '+.tm312.com'
   - '+.tma-001.com'
-  - '+.tmabike.com'
   - '+.tmaill.com'
   - '+.tmall.casa'
   - '+.tmall.com'
@@ -51654,6 +51652,7 @@ payload:
   - '+.tmcdn.net'
   - '+.tmdm.com'
   - '+.tmeiju.com'
+  - '+.tmeissheng.com'
   - '+.tmhong.com'
   - '+.tmhvps.com'
   - '+.tmiep.org'
@@ -52660,7 +52659,6 @@ payload:
   - '+.twoarmy.com'
   - '+.twocucao.xyz'
   - '+.twofei.com'
-  - '+.tworice.com'
   - '+.twsapp.com'
   - '+.twsyue.com'
   - '+.twtstudio.com'
@@ -52753,7 +52751,6 @@ payload:
   - '+.tymcdn.com'
   - '+.tyn.cc'
   - '+.tyncar.com'
-  - '+.tyniu.com'
   - '+.tyouai.com'
   - '+.tyouquan.com'
   - '+.typany.com'
@@ -53235,6 +53232,7 @@ payload:
   - '+.unjs.com'
   - '+.unlimax.com'
   - '+.unnnnn.com'
+  - '+.unogenius.com'
   - '+.unohacha.com'
   - '+.unpcn.com'
   - '+.unqu.com'
@@ -54049,7 +54047,6 @@ payload:
   - '+.volit.com'
   - '+.volmoe.com'
   - '+.voltmemo.com'
-  - '+.voltsky.com'
   - '+.volumes.cc'
   - '+.von-sh.com'
   - '+.vonets.com'
@@ -56697,7 +56694,6 @@ payload:
   - '+.wuweijob.com'
   - '+.wuweiyou.com'
   - '+.wuwenjun.net'
-  - '+.wuwenliang.net'
   - '+.wuwii.com'
   - '+.wuxi.com'
   - '+.wuxiairport.com'
@@ -56967,6 +56963,7 @@ payload:
   - '+.wzksw.com'
   - '+.wzlscf.com'
   - '+.wzlt8.com'
+  - '+.wzlysz.com'
   - '+.wzms.com'
   - '+.wzplc.com'
   - '+.wzpo.net'
@@ -57293,7 +57290,6 @@ payload:
   - '+.xeknow.com'
   - '+.xeltek-cn.com'
   - '+.xelz.info'
-  - '+.xemean.net'
   - '+.xen0n.name'
   - '+.xender.com'
   - '+.xenium.mobi'
@@ -57328,7 +57324,6 @@ payload:
   - '+.xfannix.com'
   - '+.xfb315.com'
   - '+.xfc888.com'
-  - '+.xfcgs.com'
   - '+.xfconnect.com'
   - '+.xfdown.com'
   - '+.xfeng.me'
@@ -59791,7 +59786,6 @@ payload:
   - '+.yatsoft.com'
   - '+.yawancaiwu.com'
   - '+.yawenb.com'
-  - '+.yawkj.com'
   - '+.yaxi.net'
   - '+.yaxige.com'
   - '+.yaxinde.com'
@@ -60123,6 +60117,7 @@ payload:
   - '+.ygsoft.com'
   - '+.ygtcpa.com'
   - '+.ygwenxue.com'
+  - '+.ygwh.cc'
   - '+.ygym.org'
   - '+.yh596.com'
   - '+.yh598.com'
@@ -60681,6 +60676,7 @@ payload:
   - '+.yixuan.net'
   - '+.yixue68.com'
   - '+.yixue99.com'
+  - '+.yixuebiancheng.com'
   - '+.yixueks.com'
   - '+.yixuelunwen.com'
   - '+.yixuexianzhi.com'
@@ -60796,6 +60792,7 @@ payload:
   - '+.ykstarshine.com'
   - '+.yksuit.com'
   - '+.ykt.io'
+  - '+.yktchina.com'
   - '+.yktworld.com'
   - '+.yktz.net'
   - '+.ykyao.com'
@@ -61555,6 +61552,7 @@ payload:
   - '+.yszyz.com'
   - '+.yszzlt.com'
   - '+.yt1998.com'
+  - '+.yt1a.icu'
   - '+.yt69.com'
   - '+.yt698.com'
   - '+.yta-tech.com'
@@ -62405,7 +62403,6 @@ payload:
   - '+.yzhli.com'
   - '+.yzhsk.com'
   - '+.yzhtidc.com'
-  - '+.yzintelligence.com'
   - '+.yzinter.com'
   - '+.yzipi.com'
   - '+.yzja.com'
@@ -62790,7 +62787,6 @@ payload:
   - '+.zgbmcl.com'
   - '+.zgboke.com'
   - '+.zgbywl.com'
-  - '+.zgbzad.com'
   - '+.zgc-bigdata.org'
   - '+.zgc-dsa.org'
   - '+.zgcahpw.com'
@@ -63176,7 +63172,6 @@ payload:
   - '+.zhcw.com'
   - '+.zhdba.com'
   - '+.zhdchb.com'
-  - '+.zhdclink.com'
   - '+.zhdgps.com'
   - '+.zhe.com'
   - '+.zhe28.com'
@@ -65026,6 +65021,7 @@ payload:
   - '+.zyge.net'
   - '+.zygg.cc'
   - '+.zygj.net'
+  - '+.zyguidao.com'
   - '+.zygx.wang'
   - '+.zyh365.com'
   - '+.zyhao.com'
@@ -65168,7 +65164,6 @@ payload:
   - '+.zzwenxue.com'
   - '+.zzwhtg.com'
   - '+.zzwljc.com'
-  - '+.zzwms.com'
   - '+.zzwqqx.com'
   - '+.zzwro.com'
   - '+.zzxdc.com'
