--- a/directbak.yaml
+++ b/directbak.yaml
@@ -13828,6 +13828,7 @@ payload:
   - '+.chi2ko.com'
   - '+.chi588.com'
   - '+.chiang.fun'
+  - '+.chianuos.com'
   - '+.chibaole.com'
   - '+.chichou.me'
   - '+.chichuang.com'
@@ -15700,6 +15701,7 @@ payload:
   - '+.cnlty.com'
   - '+.cnmanhua.com'
   - '+.cnmattson.com'
+  - '+.cnmb.win'
   - '+.cnmcom.com'
   - '+.cnmdy.com'
   - '+.cnmeishu.com'
@@ -16253,7 +16255,6 @@ payload:
   - '+.corpease.net'
   - '+.corpize.com'
   - '+.corpring.com'
-  - '+.corpus4u.org'
   - '+.cos-show.com'
   - '+.cosco.com'
   - '+.coscon.com'
@@ -17180,7 +17181,6 @@ payload:
   - '+.d17.cc'
   - '+.d1cm.com'
   - '+.d1com.com'
-  - '+.d1cy.com'
   - '+.d1ev.com'
   - '+.d1fm.com'
   - '+.d1lx.com'
@@ -22644,7 +22644,6 @@ payload:
   - '+.fujianrc.com'
   - '+.fujiansme.com'
   - '+.fujieace.com'
-  - '+.fujincenter.com'
   - '+.fujinjiazheng.com'
   - '+.fuka.cc'
   - '+.fukeha.com'
@@ -27018,6 +27017,7 @@ payload:
   - '+.hnkljnxh.com'
   - '+.hnklnf.com'
   - '+.hnks.com'
+  - '+.hnksgf.com'
   - '+.hnksln.com'
   - '+.hnktgame.com'
   - '+.hnkuaifawu.com'
@@ -29663,6 +29663,7 @@ payload:
   - '+.imaitu.com'
   - '+.imalljoy.com'
   - '+.imandarin.net'
+  - '+.imangodoc.com'
   - '+.imanhuaw.com'
   - '+.imanhuaw.net'
   - '+.imaojiang.com'
@@ -32033,6 +32034,7 @@ payload:
   - '+.jixie100.net'
   - '+.jixie5.com'
   - '+.jixiewz.com'
+  - '+.jixiexinxi5.com'
   - '+.jixuanw.com'
   - '+.jixunjsq.com'
   - '+.jixunlyq.com'
@@ -32844,6 +32846,7 @@ payload:
   - '+.juneyao.com'
   - '+.juneyaoair.com'
   - '+.juneyaoairlines.com'
+  - '+.junezx.com'
   - '+.jungebb.com'
   - '+.junhe.com'
   - '+.junhuisoft.com'
@@ -40920,7 +40923,6 @@ payload:
   - '+.nsrfww.com'
   - '+.nsrjlb.com'
   - '+.nss.im'
-  - '+.nssd.org'
   - '+.nsshare.com'
   - '+.nsstream.com'
   - '+.nstooll.com'
@@ -45302,6 +45304,7 @@ payload:
   - '+.repian.com'
   - '+.repianimg.com'
   - '+.replays.net'
+  - '+.replicated.cc'
   - '+.rerevod.com'
   - '+.resclassaction.com'
   - '+.resheji.com'
@@ -45433,7 +45436,6 @@ payload:
   - '+.ritarpower.com'
   - '+.ritering.com'
   - '+.rivergame.net'
-  - '+.rixin.cc'
   - '+.rixin.info'
   - '+.riyuanma.com'
   - '+.riyuexing.org'
@@ -47682,7 +47684,6 @@ payload:
   - '+.shuadanfu.com'
   - '+.shuai.win'
   - '+.shuaibo.wang'
-  - '+.shuaigay6.com'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
   - '+.shuaiming.com'
@@ -48286,6 +48287,7 @@ payload:
   - '+.sjfpro.com'
   - '+.sjfs.xyz'
   - '+.sjfzxm.com'
+  - '+.sjgh94.com'
   - '+.sjgnskf.com'
   - '+.sjhcip.com'
   - '+.sjhfrj.com'
@@ -49104,6 +49106,7 @@ payload:
   - '+.springtour.com'
   - '+.springwater.vip'
   - '+.sprzny.com'
+  - '+.spsb114.com'
   - '+.spswc.com'
   - '+.spsy.org'
   - '+.sptcc.com'
@@ -49905,7 +49908,6 @@ payload:
   - '+.sxsjgy.com'
   - '+.sxslnews.com'
   - '+.sxsoft.com'
-  - '+.sxsruida.com'
   - '+.sxsslz.net'
   - '+.sxszw.net'
   - '+.sxthzs.com'
@@ -54637,7 +54639,6 @@ payload:
   - '+.wanzhouhr.com'
   - '+.wanzhoumo.com'
   - '+.wanzhuang.com'
-  - '+.wanzhuanhulian.com'
   - '+.wanzhuanlea.com'
   - '+.wanzhuanmobile.com'
   - '+.wanzhucdn.com'
